<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".passwords">

    <TextView
        android:id="@+id/savedPassword2"
        android:layout_width="286dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/saved_passwords"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPassword2" />

    <Button
        android:id="@+id/createPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:onClick="firstActivity"
        android:text="@string/create_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSaver2" />

    <TextView
        android:id="@+id/textDate2"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="5dp"
        android:text="@string/date"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordSaver2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordSaver2"
        android:layout_width="272dp"
        android:layout_height="56dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/password_saver"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/savedPasswords"
        android:layout_width="360dp"
        android:layout_height="480dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savedPassword2">

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>