<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/passwordSaver"
        android:layout_width="272dp"
        android:layout_height="56dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/password_saver"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createPassword2"
        android:layout_width="286dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_password"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savedPasswords" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="5dp"
        android:text="@string/date"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordSaver"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/savedPasswords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/saved_passwords"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSaver" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPassword2" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/password"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionName" />

    <EditText
        android:id="@+id/descriptionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/amazon"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:nextFocusDown="@id/password1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        android:nextFocusDown="@id/password2"
        app:layout_constraintEnd_toStartOf="@+id/password2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@+id/password1"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password3"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@+id/password2"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password4"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@+id/password3"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="20dp"
        android:onClick="save"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password3" />

    <ImageButton
        android:id="@+id/randomPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:contentDescription="TODO"
        android:onClick="randomise"
        app:layout_constraintStart_toEndOf="@+id/password4"
        app:layout_constraintTop_toBottomOf="@+id/descriptionName"
        app:srcCompat="@drawable/dice_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>